Update contributors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,8 @@ Contributors:
 - @omansion
 - Mike Harris
 - Marek Malek
-- homm
 - Alexander Zhukov
-- Andrewshkovskii
+- Uploadcare team:
+    - Alexander Karpinsky
+    - Dmitry Mukhin
+    - Andrey Baryshnikov
